[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/font/Glacial_trackname.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/font/GlacialIndifference-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/userinterface/Basic_Pause_UI.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 5
outline_color = Color( 0.752941, 0.188235, 0.188235, 1 )
extra_spacing_char = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[node name="Basic_Pause_UI" type="CanvasLayer"]
pause_mode = 2

[node name="Pause_UI_Container" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="Pause_UI_Container"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="ColorRect" parent="Pause_UI_Container/BlackOverlay"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Pause_UI_Container/BlackOverlay"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
margin_left = -0.663391
margin_top = -0.307373
margin_right = -0.663391
margin_bottom = -0.307373
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paused" type="Label" parent="Pause_UI_Container/BlackOverlay"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.4
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGM_Volume" type="Control" parent="Pause_UI_Container/BlackOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Pause_UI_Container/BlackOverlay/BGM_Volume"]
anchor_left = 0.3
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.45
custom_fonts/font = ExtResource( 1 )
text = "Music Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Label" parent="Pause_UI_Container/BlackOverlay/BGM_Volume"]
anchor_left = 0.63
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.5
margin_right = -20.0
custom_fonts/font = ExtResource( 1 )
text = "10%"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX_Volume" type="Control" parent="Pause_UI_Container/BlackOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Pause_UI_Container/BlackOverlay/SFX_Volume"]
anchor_left = 0.3
anchor_top = 0.48
anchor_right = 0.7
anchor_bottom = 0.53
custom_fonts/font = ExtResource( 1 )
text = "Sound Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Label" parent="Pause_UI_Container/BlackOverlay/SFX_Volume"]
anchor_left = 0.63
anchor_top = 0.48
anchor_right = 0.7
anchor_bottom = 0.58
margin_right = -20.0
custom_fonts/font = ExtResource( 1 )
text = "100%"
valign = 1

[node name="Cancel" type="Button" parent="Pause_UI_Container/BlackOverlay"]
anchor_left = 0.3
anchor_top = 0.6
anchor_right = 0.7
anchor_bottom = 0.68
margin_left = 19.0
margin_right = -20.0
custom_fonts/font = SubResource( 2 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGM_Slider" type="HSlider" parent="Pause_UI_Container/BlackOverlay"]
pause_mode = 2
process_priority = 1
anchor_left = 0.3
anchor_top = 0.43
anchor_right = 0.62
anchor_bottom = 0.47
margin_left = 20.0
mouse_filter = 1
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.1
value = 0.5
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX_Slider" type="HSlider" parent="Pause_UI_Container/BlackOverlay"]
anchor_left = 0.3
anchor_top = 0.51
anchor_right = 0.62
anchor_bottom = 0.55
margin_left = 20.0
max_value = 1.0
step = 0.1
value = 0.4
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX_Player" type="AudioStreamPlayer" parent="Pause_UI_Container"]
[connection signal="pressed" from="Pause_UI_Container/BlackOverlay/Cancel" to="Pause_UI_Container" method="_pausing"]
[connection signal="value_changed" from="Pause_UI_Container/BlackOverlay/BGM_Slider" to="Pause_UI_Container" method="_adjust_bgm_volume"]
[connection signal="value_changed" from="Pause_UI_Container/BlackOverlay/SFX_Slider" to="Pause_UI_Container" method="_adjust_sfx_volume"]
